--- a/src/components/ShowFiles/showfiles.module.scss
+++ b/src/components/ShowFiles/showfiles.module.scss
@@ -1,54 +1,47 @@
+/* showfiles.module.scss */
+
 .filesGrid {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    gap: 30px;
-    justify-content: center;
-    margin-top: 60px;
-  }
-  
-  .files {
-    width: 250px;
-    height: 250px;
-    background-color: #64748b;
-    cursor: pointer;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 20px;
-    position: relative;
-  }
-  
-  .imageLink {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    border-radius: 10px;
-  }
-  
-  .parentFolder {
-    margin-left: 30px;
-  
-    .folderName {
-      font-size: 30px;
-    }
-  }
-  
-  .dots {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    .icon {
-      cursor: pointer;
-    }
-  }
-  
-  .modal-box {
-    width: 100%;
-  }
-  
-  .full-width {
-    width: 700px !important;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  justify-content: center;
+}
+
+
+.fileCard:hover {
+  transform: scale(1.05); /* Scale up the card on hover */
+}
+
+
+.fileCard {
+  width: 250px;
+  height: 250px;
+  background-color: #64748b;
+  cursor: pointer;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  position: relative;
+  transition: transform 0.2s; /* Add a hover effect */
+  text-align: center; /* Center-align the text */
+}
+
+.fileIcon {
+  font-size: 48px;
+  color: white;
+  cursor: pointer;
+  margin: auto; /* Center-align the icon */
+}
+
+.fileName {
+  margin: 10px;
+  color: white;
+  font-size: 14px; /* Make the font size smaller */
+  text-overflow: ellipsis; /* Add ellipsis for text overflow */
+  overflow: hidden; /* Hide overflowed text */
+  white-space: nowrap; /* Prevent text from wrapping */
+}
+
+/* Add responsive styles as needed */
